updated composer.json and readme.md

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "intonate/container",
     "description": "PHP Inversion of Control Container",
+    "keywords": ["php", "intonate", "container", "dependency", "injection"],
+    "license": "MIT",
+    "type": "package",
     "authors": [
         {
             "name": "Jorge González",
